--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -551,7 +551,7 @@ UVP Galaxus Verkaufspreis
 | *-*
 
 | *WeightG, _EU-Hub Pflichtfeld, Ganzzahl(10)_*
-| *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Tab: Einstellungen » Maße: Gewicht brutto.*
+| *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Tab: Einstellungen » Maße: Gewicht brutto*
 
 | *WidthM, _Dezimalzahl(14,4)_*
 | *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Tab: Einstellungen » Maße: Länge/Breite/Höhe*
@@ -572,16 +572,20 @@ UVP Galaxus Verkaufspreis
 | *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Global » Altersfreigabe*
 
 | *ProductTitle_DE, _Pflichtfeld (Mindestens eine der vier Sprachen), (Text100)_*
-| *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Name 1 (de) oder Name 2,3 * Auswählbar in der Elastic Export Konfiguration für dieses Format.*
+| *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Name 1 (de) oder Name 2,3* +
+Auswählbar in der Elastic-Export-Konfiguration für dieses Format.
 
 | *ProductTitle_EN, _(Text100)_*
-| *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Name 1 (en) oder Name 2,3 * Auswählbar in der Elastic Export Konfiguration für dieses Format*
+| *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Name 1 (en) oder Name 2,3* +
+Auswählbar in der Elastic-Export-Konfiguration für dieses Format.
 
 | *ProductTitle_FR, _(Text100)_*
-| *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Name 1 (fr) oder Name 2,3 * Auswählbar in der Elastic Export Konfiguration für dieses Format*
+| *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Name 1 (fr) oder Name 2,3* +
+Auswählbar in der Elastic-Export-Konfiguration für dieses Format.
 
 | *ProductTitle_IT, _(Text100)_*
-| *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Name 1 (it) oder Name 2,3 * Auswählbar in der Elastic Export Konfiguration für dieses Format*
+| *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Name 1 (it) oder Name 2,3* +
+Auswählbar in der Elastic-Export-Konfiguration für dieses Format.
 
 | *ProductTitleTagLine_DE, _Text_*
 | *-*
@@ -596,17 +600,20 @@ UVP Galaxus Verkaufspreis
 | *-*
 
 | *ProductDescription_DE, _Pflichtfeld (Mindestens eine der vier Sprachen), Text_*
-| Standard: *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Artikeltext (de)* oder Eingabefeldauswahl von: *Einrichtung » Märkte » Galaxus » Artikel Export » Product Data Artikel » Eingabefeldzuordnungen.*
+| Standard: *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Artikeltext (de)* +
+oder Eingabefeldauswahl von: *Einrichtung » Märkte » Galaxus » Artikel Export » Product Data Artikel » Eingabefeldzuordnungen*
 
 | *ProductDescription_EN, _Text_*
-| Standard: *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Artikeltext (en)* oder Eingabefeldauswahl von: *Einrichtung » Märkte » Galaxus » Artikel Export » Product Data Artikel » Eingabefeldzuordnungen.*
+| Standard: *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Artikeltext (en)* +
+oder Eingabefeldauswahl von: *Einrichtung » Märkte » Galaxus » Artikel Export » Product Data Artikel » Eingabefeldzuordnungen*
 
 | *ProductDescription_FR, _Text_*
 | Standard: *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Artikeltext (fr)* +
-oder Eingabefeldauswahl von: *Einrichtung » Märkte » Galaxus » Artikel Export » Product Data Artikel » Eingabefeldzuordnungen.*
+oder Eingabefeldauswahl von: *Einrichtung » Märkte » Galaxus » Artikel Export » Product Data Artikel » Eingabefeldzuordnungen*
 
 | *ProductDescription_IT, _Text_*
-| Standard: *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Artikeltext (it)* oder Eingabefeldauswahl von: *Einrichtung » Märkte » Galaxus » Artikel Export » Product Data Artikel » Eingabefeldzuordnungen.*
+| Standard: *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Texte » Artikeltext (it)* +
+oder Eingabefeldauswahl von: *Einrichtung » Märkte » Galaxus » Artikel Export » Product Data Artikel » Eingabefeldzuordnungen*
 
 | *MinimumOrderQuantity, _Pflichtfeld, Ganzzahl(10)_*
 | *Artikel » Artikel bearbeiten » [Artikel öffnen] » [Variante öffnen] » Tab: Einstellungen » Verfügbarkeit: Min.-Bestellmenge*
