--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -653,7 +653,7 @@ oder Eingabefeldauswahl von: *Einrichtung » Märkte » Galaxus » Artikel Expor
 | *Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: Bestand » Tab: Warenbestand » Netto*
 
 | *DeliveryDate, _Format (JJJJ-MM-TT)_*
-| *Artikel » Variante » Tab: Esintelungen » Abschnitt: Verfügbarkeit » Kontrollkästchen Auswahl von 1 bis 10*
+| *Artikel » Variante » Tab: Einstellungen » Abschnitt: Verfügbarkeit » Kontrollkästchen Auswahl von 1 bis 10*
 
 Diese Auswahl entspricht den Eistellungen unter *Einrichtung » Artikel » Verfügbarkeit » Durchschnittliche Lieferzeit*
 
