--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -77,7 +77,7 @@ Wenn du den EU-Hub nutzt, läuft eine Retoure so ab:
 . Du wirst von Galaxus über die Retoure informiert.
 . Kund:in sendet die Retoure an Digitec Galaxus AG in der Schweiz.
 . Das Paket wird im Schweizer Zentrallager logistisch und zollrechtlich verarbeitet:
-  * Paket wird mit Versandetiketten für  UHL versehen.
+  * Paket wird mit Versandetiketten für DHL versehen.
   * Die rechtlich notwendigen Ausfuhrschritte werden erledigt.
 . Das Paket wird in das EU-Hub transportiert.
 . Das EU-Hub erledigt die für die Einfuhr nötigen Schritte.
