--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -911,7 +911,7 @@ PDF-Vorlage für Rechnungen anpassen:
 . Nimm die in <<table-delivery-notes>> beschriebenen Einstellungen vor. +
 *_Tipp:_* Je nachdem, wie du dein Layout gestaltest, kannst du vielleicht auch alle Hinweise in dasselbe Eingabefeld *Zahlungshinweis* einfügen.
 . Prüfe anhand der link:https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-Verzollungs-L%C3%B6sung-der-Digitec-Galaxus-AG-nutzen-[Dokumentation von Galaxus^], ob weitere Anpassungen an deiner Vorlage erforderlich sind. +
-*_Wichtig:_* Die Vorlage gilt für alle Rechnungen für dieses Land, nicht nur für {market}.
+*_Wichtig:_* Die Vorlage wird für alle Rechnungen für dieses Land verwendet, nicht nur für {market}.
 . Speichere (terra:save[]) die Einstellungen. +
 → Die nötigen Angaben werden auf Rechnungen angezeigt.
 
@@ -1030,7 +1030,7 @@ Vorlage für Rechnungen anpassen:
 . Nimm die in <<#table-invoices-fiscal-rep>> beschriebenen Einstellungen vor. +
 *_Tipp:_* Je nachdem, wie du dein Layout gestaltest, kannst du vielleicht auch alle Hinweise in dasselbe Eingabefeld *Zahlungshinweis* einfügen.
 . Prüfe anhand der link:https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-Verzollungs-L%C3%B6sung-der-Digitec-Galaxus-AG-nutzen-[Dokumentation von Galaxus], ob weitere Anpassungen an deiner Vorlage erforderlich sind. +
-*_Wichtig:_* Die Vorlage gilt für alle Rechnungen für dieses Land, nicht nur für {market}.
+*_Wichtig:_* Die Vorlage wird für alle Rechnungen für dieses Land verwendet, nicht nur für {market}.
 . Speichere (terra:save[]) die Einstellungen. +
 → Die Angaben werden auf Rechnungen angezeigt.
 
@@ -1103,7 +1103,7 @@ Vorlage für Lieferscheine anpassen:
 . Navigiere zum Bereich *Optionale Elemente unter Artikelpositionstabelle*.
 . Nimm die in <<table-delivery-notes>> beschriebenen Einstellungen vor.
 . Prüfe anhand der link:https://partner.digitecgalaxus.ch/hc/de/articles/360016260840-Welche-Dokumente-f%C3%BCge-ich-der-Lieferung-bei-[Dokumentation von Galaxus], ob weitere Anpassungen an deiner Vorlage erforderlich sind. +
-*_Wichtig:_* Die Vorlage gilt für alle Lieferscheine für dieses Land, nicht nur für {market}.
+*_Wichtig:_* Die Vorlage wird für alle Lieferscheine für dieses Land verwendet, nicht nur für {market}.
 . Speichere (terra:save[]) die Einstellungen. +
 → Die nötigen Angaben werden auf Lieferscheinen angezeigt.
 
