--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -64,7 +64,7 @@ Wenn du den EU-Hub nutzt, läuft eine Bestellung so ab:
 . Das Paket wird an die Schweizer Post übergeben.
 . Kund:in nimmt das Paket in Empfang.
 
-https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-Verzollungs-L%C3%B6sung-der-Digitec-Galaxus-AG-nutzen-[Weitere Informationen und Vorraussetzungen für die Nutzung des EU-Hubs findest du bei Galaxus^].
+https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-Verzollungs-L%C3%B6sung-der-Digitec-Galaxus-AG-nutzen-[Weitere Informationen und Voraussetzungen für die Nutzung des EU-Hubs findest du bei Galaxus^].
 --
 
 [.collapseBox]
@@ -85,7 +85,7 @@ Wenn du den EU-Hub nutzt, läuft eine Retoure so ab:
 . Du nimmst die Retoure entgegen.
 . Du informierst Galaxus darüber, dass die Retoure angenommen wurde.
 
-https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-Verzollungs-L%C3%B6sung-der-Digitec-Galaxus-AG-nutzen-[Weitere Informationen und Vorraussetzungen für die Nutzung des EU-Hubs findest du bei Galaxus^].
+https://partner.digitecgalaxus.ch/hc/de/articles/360016297139-Wie-kann-ich-die-Verzollungs-L%C3%B6sung-der-Digitec-Galaxus-AG-nutzen-[Weitere Informationen und Voraussetzungen für die Nutzung des EU-Hubs findest du bei Galaxus^].
 --
 
 [#difference-fiscal-representation]
@@ -880,7 +880,7 @@ EU-Hub ohne Fiskalvertretung::
 .*_Muster:_* Exporthandelsrechnung für Händler:innen OHNE Fiskalvertretung
 image::maerkte:201120_DIGGAX_ohne_Fiskalvertreter.png[]
 
-Damit diese Informationen auf den Rechnungen erscheinen, gehst du wie unten beschrieben vor.
+Damit diese Informationen auf den Rechnungen erscheinen, gehe wie unten beschrieben vor.
 
 [.instruction]
 PDF-Vorlage für Rechnungen hochladen:
