--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -124,19 +124,13 @@ Einstellungen
 
 * In allen Szenarien, in denen nur ein Teil der Bestellung weiterbearbeitet werden soll, muss die importierte Bestellung aufgeteilt werden. Die resultierenden Aufträge müssen separat bearbeitet werden.
 
-* Status zur Ablehnung von Teilstorno-Anfragen und Storno-anfragen muss vom Benutzer gesetzt werden, unter *Einrichtung » Märkte » Galaxus » Auftragsimport » Auftrag Status-Konfiguration*. Ohne Benutzer-Auswahl, wird der Status *[5] Freigabe Versand eingesetzt* Standardmässig eingesetzt.
+* Status zur Ablehnung von Teilstorno-Anfragen und Storno-anfragen muss vom Benutzer gesetzt werden, unter *Einrichtung » Märkte » Galaxus » Auftragsimport » Auftrag Status-Konfiguration*. Ohne Auswahl wird der Status *[5] Freigabe Versand* standardmässig eingesetzt.
 
 * Das Plugin kann nach dem Aufteilen eines Auftrags, ohne zusätzliche Benutzereingaben, zum korrekten Galaxus Auftrag zurückmelden.
 
 * Galaxus Retoure-Anfragen generieren neue plentymarkets Aufträge vom Typ *Retoure* * diese werden zum Initial-Auftrag verknüpft. Die resultierenden Aufträge sind separat zu bearbeiten.
 
 * Das Standard Lieferdatum für Galaxus Aufträge ist: Tag an dem die Ereignisaktion *Auftragsbestätigung an Galaxus senden* ausgelöst wurde *+ 2 Arbeitstage*,es sei denn, ein anderes Lieferdatum ist unter *Auftrag » Übersicht » Artikel » Bearbeiten » Lieferdatum* im Voraus eingetragen worden. Ein Versanddatum wird auch nicht gesetzt, wenn die zur  Auftragserfüllung benötigte Warenmenge, nicht als Warenbestand-Netto  vorhanden ist. Das geplante Lieferdatum kann anahnd der Plugin-Option  *Positive Bestände sollen immer exportiert werden...* unter *Einrichtung » Märkte » Galaxus » Product Stock Price Tab*  weiteren Änderungen unterliegen.
-
-* Nehme, neben deinen standardmässigen Lieferschein-Einstellungen, noch folgende Einstellungen für Galaxus Lieferscheine vor:
-
-. Öffne das Menü *Einrichtung » Mandant » Standorte » Standort wählen » Dokumente » Lieferschein*.
-. Wähle im Abschnitt *Optionale Elemente unter Artikelposition* für die Option *Externe Auftragsnummer* die Einstellung *Ja*.
-. Gebe im Eingabefeld *Hinweis* folgenden von Galaxus vorgegebenen Hinwei
 
 === Auftrag teilen, ein Beispiel
 
@@ -1229,7 +1223,7 @@ Richte, Beispielsweise, eine Ereignisaktion ein, um die Auftragsbestätigung Aut
 
 * In allen Szenarien bei denen nur ein Teil der Bestellung weiterbearbeitet (Retoure/Versand) werden soll, muss die importierte Bestellung aufgeteilt werden. Die resultierenden Aufträge sind separat zu bearbeiten.
 
-* Status zur Ablehnung von Teilstorno-Anfragen und Storno-anfragen muss von der Benutzer:in im Menü *Einrichtung » Märkte » Galaxus » Auftragsimport » Auftrag Status-Konfiguration* gesetzt werden. Ohne Auswahl, wird der Status *[5] Freigabe Versand* standardmässig eingesetzt.
+* Status zur Ablehnung von Teilstorno-Anfragen und Storno-anfragen muss von der Benutzer:in im Menü *Einrichtung » Märkte » Galaxus » Auftragsimport » Auftrag Status-Konfiguration* gesetzt werden. Ohne Auswahl wird der Status *[5] Freigabe Versand* standardmässig eingesetzt.
 
 * Das Plugin kann nach dem Aufteilen eines Auftrags, ohne zusätzliche Eingaben, zum korrekten Galaxus-Auftrag zurückmelden.
 
