FIX a few issues noticed during translation

--- a/docs/de-de/modules/artikel/pages/artikelsuche.adoc
+++ b/docs/de-de/modules/artikel/pages/artikelsuche.adoc
@@ -245,6 +245,10 @@ Deine Suchanfrage würde sich nur auf Artikel beziehen, die in die Hauptkategori
 *_Wie wähle ich Unterkategorien?_*:
 Klicke auf icon:chevron-right[role="darkGrey"], um eine Hauptkategorie zu öffnen und ihre Unterkategorien zu sehen.
 
+*_Hinweis_*: Dies ist ein "und"-Filter.
+Das heißt, es werden nur die Artikel gefunden, die in allen eingegebenen Kategorien sind.
+Suchst du zum Beispiel nach den Kategorie-IDs 12, 18, 32 und 7, dann werden nur Artikel gefunden, die in allen vier Kategorien aufgeführt sind.
+
 | *Mit Verkaufskanal verknüpft*
 |Willst du nach Produkten suchen, die über einen bestimmten Vertriebskanal verkauft werden?
 Wähle eine oder mehrere Herkünfte aus der Dropdown-Liste aus (icon:check-square[role="blue"]).
