--- a/docs/de-de/modules/artikel/pages/group-functions.adoc
+++ b/docs/de-de/modules/artikel/pages/group-functions.adoc
@@ -20,14 +20,14 @@ plentymarkets beinhaltet verschiedene Funktionen zur Massenverarbeitung.
 |===
 
 |xref:artikel:group-functions.adoc#100[Gruppenfunktion]
-|Nutze die Gruppenfunktion, um mehrere Artikel oder Varianten gleichzeitig zu bearbieten.
+|Nutze die Gruppenfunktion, um mehrere Artikel oder Varianten gleichzeitig zu bearbeiten.
 
 *_Beispiele_*:
 
 * du willst die Artikel auswählen, die in einem Sonderverkauf angeboten werden sollen.
 * du willst den Preis aller Varianten eines bestimmten Herstellers erhöhen.
 
-|xref:artikel:group-functions.adoc#650[Import & Export]
+|xref:artikel:group-functions.adoc#400[Import & Export]
 |Nutze den Import & Export, um mehrere Artikel oder Varianten gleichzeitig in einer CSV-Datei zu bearbeiten.
 
 *_Ablauf_*:
@@ -35,12 +35,12 @@ plentymarkets beinhaltet verschiedene Funktionen zur Massenverarbeitung.
 . Exportiere eine CSV-Datei, die mit Produktdaten gefüllt ist.
 . Überarbeite die Datei und importiere sie wieder.
 
-|xref:artikel:group-functions.adoc#700[Suchen & Ersetzen]
+|xref:artikel:group-functions.adoc#500[Suchen & Ersetzen]
 |Stell dir vor, du hast gerade erfahren, dass dein Hersteller ein Zubehörteil umbenannt hat.
 Jetzt ist es an dir, den Namen in allen Artikeltexten zu ändern.
 Verwende die Suchen & Ersetzen-Funktion, um ein Wort oder eine Formulierung global in allen Artikeltexten anzupassen.
 
-|xref:artikel:group-functions.adoc#800[Kopieren]
+|xref:artikel:group-functions.adoc#600[Kopieren]
 |Stell dir vor, du willst einen neuen Artikel zu deinem Sortiment hinzufügen.
 Er ist einem bestehenden Produkt recht ähnlich.
 Kopiere in diesem Fall das bestehende Produkt.
