--- a/docs/de-de/modules/warenwirtschaft/pages/leitfaden-inventur.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/leitfaden-inventur.adoc
@@ -1,4 +1,4 @@
-warenbewegung-exportieren= Leitfaden zur Inventur
+= Leitfaden zur Inventur
 :keywords: Inventur, plentyWarehouse App, plenty warehouse app, plenty-warehouse App, Zählprotokoll, Warenbewegungen exportieren, Warenbestände exportieren, Inventur vornehmen, Inventur durchführen, Tipps Inventur
 :id: 1SHGYNJ
 :author: team-stock, team-mobile
