--- a/docs/de-de/modules/maerkte/pages/galaxus.adoc
+++ b/docs/de-de/modules/maerkte/pages/galaxus.adoc
@@ -1196,9 +1196,7 @@ Eine Begründung zur Ablehnung kann auf der Auftragsnotiz, vor dem Ausführen di
 
 | Rechnung an Galaxus senden
 | Statuswechsel
-| Sendet die Auftrag enthaltene Rechnung.pdf an Galaxus.
-
-*_Hinweis:_* Du kannst eine PDF-Vorlage für deine Galaxus Rechnungen, unter *Mandant » Betroffener Mandant » Standorte » betroffener Standort » Dokumente » Rechnung » Tab PDF-Vorlage* für die Zahlungsart: *Plugin: Galaxus Direct Checkout* hizufügen. Dieses Template wird nach Erstellung, automatisch für den Galaxus PDF-Upload eingesetzt.
+| Sendet die im Auftrag enthaltene Rechnung.pdf an Galaxus.
 |===
 
 ==== Beispiel: Ereignisaktion "Auftragsbestätigung an Galaxus senden" einrichten
@@ -1230,15 +1228,6 @@ Richte, Beispielsweise, eine Ereignisaktion ein, um die Auftragsbestätigung Aut
 * Galaxus Retoure-Anfragen generieren neue plentymarkets Aufträge vom Typ *Retoure* * diese werden zum Initial-Auftrag verknüpft. Die resultierenden Aufträge sind separat zu bearbeiten.
 
 * Das Standard Lieferdatum für Galaxus Aufträge ist: Tag an dem die Ereignisaktion *Auftragsbestätigung an Galaxus senden* ausgelöst wurde *+ 2 Arbeitstage*,es sei denn, ein anderes Lieferdatum ist unter *Auftrag » Übersicht » Artikel » Bearbeiten » Lieferdatum* im Voraus eingetragen worden. Ein Versanddatum wird auch nicht gesetzt, wenn die zur Auftragserfüllung benötigte Warenmenge, nicht als Warenbestand-Netto vorhanden ist. Das geplante Lieferdatum kann anahnd der Plugin-Option *Positive Bestände sollen immer exportiert werden...* unter *Einrichtung » Märkte » Galaxus » Product Stock Price Tab* weiteren Änderungen unterliegen.
-
-* Nehme, neben deinen standardmässigen Lieferschein-Einstellungen, noch folgende Einstellungen für Galaxus Lieferscheine vor:
-
-. Öffne das Menü *Einrichtung » Mandant » Standorte » Standort wählen » Dokumente » Lieferschein*.
-. Wähle im Abschnitt *Optionale Elemente unter Artikelposition* für die Option *Externe Auftragsnummer* die Einstellung *Ja*.
-. Gebe im Eingabefeld *Hinweis* folgenden von Galaxus vorgegebenen Hinweis ein: +
-`Vielen Dank für Ihre Bestellung!` +
-`Bestellungen über www.galaxus.ch unterliegen den AGB der Digitec Galaxus AG. Bei einer allfälligen Retoure bitten wir Sie unbedingt den geführten Retourenprozess in Ihrem Kundenkonto auf www.galaxus.ch zu nutzen. So ersparen Sie uns und Digitec Galaxus unnötige Aufwände und erhalten die Gutschrift via Galaxus unverzüglich.`
-. *Speichere* die Änderungen.
 
 ==== Auftrag teilen, ein Beispiel
 
