add missing includes

--- a/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/versandumsatz.adoc
@@ -179,6 +179,8 @@ include:partial$subscription-start-date.adoc[]
 :kennzahl: Der Versandumsatz
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum der Artikel einbezogen, die im Abonnement enthalten sind.
 
+include:partial$subscription-item-start-date.adoc[]
+
 === Warenausgangsdatum
 
 :kennzahl: Der Versandumsatz
