--- a/docs/de-de/modules/business-entscheidungen/pages/rohertrag.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/rohertrag.adoc
@@ -17,33 +17,19 @@ Setze außerdem xref:business-entscheidungen:rohertrag.adoc#200[Filter] um zu ko
 [#100]
 == Dimension
 
-=== Erstellungsdatum
+=== Artikelkategorie, Erstellungsdatum
 
 :kennzahl: Der Rohertrag
-:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem die Aufträge erstellt wurden, einbezogen.
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welche Kategorie generiert. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
 
-include::partial$erstellungsdatum.adoc[]
+include::partial$artikelkategorie-erstellungsdatum.adoc[]
 
-=== Rechnungsland, Erstellungsdatum
-
-:kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag in welchem Rechnungsland generiert wird. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
-
-include::partial$rechnungsland-erstellungsdatum.adoc[]
-
-=== Lieferland, Erstellungsdatum
+=== Auftragsherkunft Plugin, Erstellungsdatum
 
 :kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag in welchem Lieferland generiert wird. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Umsatzsteuer sich aufgeschlüsselt nach den Plugins, über die Aufträge in dein plentymarkets System gelangen, ergibt. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
 
-include::partial$lieferland-erstellungsdatum.adoc[]
-
-=== Warenausgangsdatum
-
-:kennzahl: Der Rohertrag
-:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem der Warenausgang für die Aufträge gebucht wurde, einbezogen.
-
-include::partial$warenausgangsdatum.adoc[]
+include:partial$order-referrer-plugin-creation-date.adoc[]
 
 === Auftragsherkunft, Erstellungsdatum
 
@@ -52,26 +38,40 @@ include::partial$warenausgangsdatum.adoc[]
 
 include::partial$auftragsherkunft-erstellungsdatum.adoc[]
 
-=== Artikelkategorie, Erstellungsdatum
+=== Auftragsherkunft, Fertigstellungsdatum
 
 :kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welche Kategorie generiert. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welche Auftragsherkunft generiert. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
-include::partial$artikelkategorie-erstellungsdatum.adoc[]
+include::partial$auftragsherkunft-warenausgangsdatum.adoc[]
 
-=== Lager, Erstellungsdatum
-
-:kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag über welches Lager generiert wird. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
-
-include::partial$lager-erstellungsdatum.adoc[]
-
-=== Mandant, Erstellungsdatum
+=== Auftragsherkunft, Zahlungsdatum
 
 :kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag über welchen Mandanten generiert wird. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welche Auftragsherkunft generiert. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
 
-include::partial$mandant-erstellungsdatum.adoc[]
+include::partial$auftragsherkunft-zahlungsdatum.adoc[]
+
+=== Enddatum Abo
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum des Abonnements einbezogen.
+
+include:partial$subscription-end-date.adoc[]
+
+=== Enddatum Abo Artikel
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum der Artikel einbezogen, die im Abonnement enthalten sind.
+
+include:partial$subscription-item-end-date.adoc[]
+
+=== Erstellungsdatum
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem die Aufträge erstellt wurden, einbezogen.
+
+include::partial$erstellungsdatum.adoc[]
 
 === Hersteller, Erstellungsdatum
 
@@ -80,12 +80,96 @@ include::partial$mandant-erstellungsdatum.adoc[]
 
 include::partial$hersteller-erstellungsdatum.adoc[]
 
+=== Kontakt, Erstellungsdatum
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: So erkennst du auf einem Blick, wie viel Versandumsatz von welchem Kontakt generiert wird. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
+
+include:partial$contact-creation-date.adoc[]
+
+=== Lager, Erstellungsdatum
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag über welches Lager generiert wird. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+
+include::partial$lager-erstellungsdatum.adoc[]
+
+=== Lager, Fertigstellungsdatum
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag über welches Lager generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
+
+include::partial$lager-warenausgangsdatum.adoc[]
+
+=== Lager, Zahlungsdatum
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag über welches Lager generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
+
+include::partial$lager-zahlungsdatum.adoc[]
+
+=== Lieferland, Erstellungsdatum
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag in welchem Lieferland generiert wird. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+
+include::partial$lieferland-erstellungsdatum.adoc[]
+
+=== Mandant, Erstellungsdatum
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag über welchen Mandanten generiert wird. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+
+include::partial$mandant-erstellungsdatum.adoc[]
+
+=== Mandant, Fertigstellungsdatum
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welcher Mandant generiert. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
+
+include::partial$mandant-warenausgangsdatum.adoc[]
+
+=== Mandant, Zahlungsdatum
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welcher Mandant generiert. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
+
+include::partial$mandant-zahlungsdatum.adoc[]
+
+=== Rechnungsland, Erstellungsdatum
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag in welchem Rechnungsland generiert wird. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+
+include::partial$rechnungsland-erstellungsdatum.adoc[]
+
 === Retourengrund, Erstellungsdatum
 
 :kennzahl: Der Rohertrag
 :das-bedeutet: So erkennst du auf einen Blick, wie der Rohertrag durch Retourengründe beeinflusst wird. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
 
 include::partial$retourengrund-erstellungsdatum.adoc[]
+
+=== Startdatum Abo
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum des Abonnements einbezogen.
+
+include:partial$subscription-start-date.adoc[]
+
+=== Startdatum Abo Artikel
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum der Artikel einbezogen, die im Abonnement enthalten sind.
+
+include:partial$subscription-item-start-date.adoc[]
+
+=== Warenausgangsdatum
+
+:kennzahl: Der Rohertrag
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem der Warenausgang für die Aufträge gebucht wurde, einbezogen.
+
+include::partial$warenausgangsdatum.adoc[]
 
 === Zahlungsart, Erstellungsdatum
 
@@ -100,48 +184,6 @@ include::partial$zahlungsart-erstellungsdatum.adoc[]
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem den Aufträgen eine Zahlung zugeordnet wurde, einbezogen.
 
 include::partial$zahlungsdatum.adoc[]
-
-=== Auftragsherkunft, Zahlungsdatum
-
-:kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welche Auftragsherkunft generiert. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
-
-include::partial$auftragsherkunft-zahlungsdatum.adoc[]
-
-=== Lager, Zahlungsdatum
-
-:kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag über welches Lager generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
-
-include::partial$lager-zahlungsdatum.adoc[]
-
-=== Mandant, Zahlungsdatum
-
-:kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welcher Mandant generiert. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
-
-include::partial$mandant-zahlungsdatum.adoc[]
-
-=== Auftragsherkunft, Fertigstellungsdatum
-
-:kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welche Auftragsherkunft generiert. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
-
-include::partial$auftragsherkunft-warenausgangsdatum.adoc[]
-
-=== Lager, Fertigstellungsdatum
-
-:kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag über welches Lager generiert wird. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
-
-include::partial$lager-warenausgangsdatum.adoc[]
-
-=== Mandant, Fertigstellungsdatum
-
-:kennzahl: Der Rohertrag
-:das-bedeutet: So erkennst du auf einen Blick, wie viel Rohertrag welcher Mandant generiert. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
-
-include::partial$mandant-warenausgangsdatum.adoc[]
 
 [#200]
 == Filter
