--- a/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/durchschnittliche-anzahl-auftragspositionen.adoc
@@ -16,33 +16,19 @@ Setze außerdem xref:business-entscheidungen:durchschnittliche-anzahl-auftragspo
 [#100]
 == Dimension
 
-=== Erstellungsdatum
+=== Artikelkategorie, Erstellungsdatum
 
 :kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem die Aufträge erstellt wurden, einbezogen.
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen in welcher Kategorie verkauft werden. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
 
-include::partial$erstellungsdatum.adoc[]
+include::partial$artikelkategorie-erstellungsdatum.adoc[]
 
-=== Rechnungsland, Erstellungsdatum
+=== Auftragsherkunft Plugin, Erstellungsdatum
 
-:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich in welchem Rechnungsland verkauft werden. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+:kennzahl: Die Kennzahl Aufträge
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen aufgeschlüsselt nach den Plugins, über die Aufträge in dein plentymarkets System gelangen, durchschnittlich verkauft werden. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
 
-include::partial$rechnungsland-erstellungsdatum.adoc[]
-
-=== Lieferland, Erstellungsdatum
-
-:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich in welchem Lieferland verkauft werden. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
-
-include::partial$lieferland-erstellungsdatum.adoc[]
-
-=== Warenausgangsdatum
-
-:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem der Warenausgang für die Aufträge gebucht wurde, einbezogen.
-
-include::partial$warenausgangsdatum.adoc[]
+include:partial$order-referrer-plugin-creation-date.adoc[]
 
 === Auftragsherkunft, Erstellungsdatum
 
@@ -51,26 +37,40 @@ include::partial$warenausgangsdatum.adoc[]
 
 include::partial$auftragsherkunft-erstellungsdatum.adoc[]
 
-=== Artikelkategorie, Erstellungsdatum
+=== Auftragsherkunft, Fertigstellungsdatum
 
 :kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen in welcher Kategorie verkauft werden. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welche Auftragsherkunft verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
 
-include::partial$artikelkategorie-erstellungsdatum.adoc[]
+include::partial$auftragsherkunft-warenausgangsdatum.adoc[]
 
-=== Lager, Erstellungsdatum
-
-:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welches Lager verkauft werden. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
-
-include::partial$lager-erstellungsdatum.adoc[]
-
-=== Mandant, Erstellungsdatum
+=== Auftragsherkunft, Zahlungsdatum
 
 :kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welchen Mandanten verkauft werden. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welche Auftragsherkunft verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
 
-include::partial$mandant-erstellungsdatum.adoc[]
+include::partial$auftragsherkunft-zahlungsdatum.adoc[]
+
+=== Enddatum Abo
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum des Abonnements einbezogen.
+
+include:partial$subscription-end-date.adoc[]
+
+=== Enddatum Abo Artikel
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Enddatum der Artikel einbezogen, die im Abonnement enthalten sind.
+
+include:partial$subscription-item-end-date.adoc[]
+
+=== Erstellungsdatum
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem die Aufträge erstellt wurden, einbezogen.
+
+include::partial$erstellungsdatum.adoc[]
 
 === Hersteller, Erstellungsdatum
 
@@ -79,12 +79,96 @@ include::partial$mandant-erstellungsdatum.adoc[]
 
 include::partial$hersteller-erstellungsdatum.adoc[]
 
+=== Kontakt, Erstellungsdatum
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: So erkennst du auf einem Blick, wie viele Aufträge aufgeschlüsselt nach Kontakt generiert wurden. Differenziert wird zusätzlich nach dem Erstellungsdatum der Aufträge.
+
+include:partial$contact-creation-date.adoc[]
+
+=== Lager, Erstellungsdatum
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welches Lager verkauft werden. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+
+include::partial$lager-erstellungsdatum.adoc[]
+
+=== Lager, Fertigstellungsdatum
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welches Lager verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
+
+include::partial$lager-warenausgangsdatum.adoc[]
+
+=== Lager, Zahlungsdatum
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welches Lager verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
+
+include::partial$lager-zahlungsdatum.adoc[]
+
+=== Lieferland, Erstellungsdatum
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich in welchem Lieferland verkauft werden. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+
+include::partial$lieferland-erstellungsdatum.adoc[]
+
+=== Mandant, Erstellungsdatum
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welchen Mandanten verkauft werden. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+
+include::partial$mandant-erstellungsdatum.adoc[]
+
+=== Mandant, Fertigstellungsdatum
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welchen Mandanten verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
+
+include::partial$mandant-warenausgangsdatum.adoc[]
+
+=== Mandant, Zahlungsdatum
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welchen Mandanten verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
+
+include::partial$mandant-zahlungsdatum.adoc[]
+
+=== Rechnungsland, Erstellungsdatum
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich in welchem Rechnungsland verkauft werden. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
+
+include::partial$rechnungsland-erstellungsdatum.adoc[]
+
 === Retourengrund, Erstellungsdatum
 
 :kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
 :das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich aufgeschlüsselt nach Retourengründen verkauft werden. Differenziert wird zusätzlich nach Erstellungsdatum der Aufträge.
 
 include::partial$retourengrund-erstellungsdatum.adoc[]
+
+=== Startdatum Abo
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum des Abonnements einbezogen.
+
+include:partial$subscription-start-date.adoc[]
+
+=== Startdatum Abo Artikel
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Startdatum der Artikel einbezogen, die im Abonnement enthalten sind.
+
+include:partial$subscription-item-start-date.adoc[]
+
+=== Warenausgangsdatum
+
+:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
+:das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem der Warenausgang für die Aufträge gebucht wurde, einbezogen.
+
+include::partial$warenausgangsdatum.adoc[]
 
 === Zahlungsart, Erstellungsdatum
 
@@ -99,48 +183,6 @@ include::partial$zahlungsart-erstellungsdatum.adoc[]
 :das-bedeutet: Bei der Berechnung wird dementsprechend das Datum, an dem den Aufträgen eine Zahlung zugeordnet wurde, einbezogen.
 
 include::partial$zahlungsdatum.adoc[]
-
-=== Auftragsherkunft, Zahlungsdatum
-
-:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welche Auftragsherkunft verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
-
-include::partial$auftragsherkunft-zahlungsdatum.adoc[]
-
-=== Lager, Zahlungsdatum
-
-:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welches Lager verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
-
-include::partial$lager-zahlungsdatum.adoc[]
-
-=== Mandant, Zahlungsdatum
-
-:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welchen Mandanten verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem einem Auftrag eine Zahlung zugeordnet wurde.
-
-include::partial$mandant-zahlungsdatum.adoc[]
-
-=== Auftragsherkunft, Fertigstellungsdatum
-
-:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welche Auftragsherkunft verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
-
-include::partial$auftragsherkunft-warenausgangsdatum.adoc[]
-
-=== Lager, Fertigstellungsdatum
-
-:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welches Lager verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
-
-include::partial$lager-warenausgangsdatum.adoc[]
-
-=== Mandant, Fertigstellungsdatum
-
-:kennzahl: Die durchschnittliche Anzahl der Auftragspositionen
-:das-bedeutet: So erkennst du auf einen Blick, wie viele Auftragspositionen durchschnittlich über welchen Mandanten verkauft werden. Differenziert wird zusätzlich nach dem Datum, an dem der Warenausgang für die Aufträge gebucht wurde.
-
-include::partial$mandant-warenausgangsdatum.adoc[]
 
 [#200]
 == Filter
