update order of dropdown entries for marketplace variation validation kf fix wording

--- a/docs/de-de/modules/business-entscheidungen/pages/marktplatz-variantenvalidierung.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/marktplatz-variantenvalidierung.adoc
@@ -45,6 +45,8 @@ include::partial$erstellungsdatum.adoc[]
 [#500]
 == Filter
 
+// Erstellt am
+
 :filtered-data: der Validierung
 
 include::partial$erstellt-am.adoc[]
@@ -78,42 +80,7 @@ include::partial$groesser-als.adoc[]
 
 --
 
-include::partial$kennzeichenwert.adoc[]
-
-[.collapseBox]
-.Verfügbare Vergleichsoperatoren
---
-
-[[table-key-figures-kennzeichenwert]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Operator | Erklärung
-
-include::partial$ist-gleich.adoc[]
-
-include::partial$ist-nicht-gleich.adoc[]
-
-|====
---
-
-include::partial$schluesselfeld.adoc[]
-
-[.collapseBox]
-.Verfügbare Vergleichsoperatoren
---
-
-[[table-key-figures-operators-schluesselfeld]]
-[cols="1,1,3"]
-|====
-| Vergleichsoperator | Operator | Erklärung
-
-include::partial$ist-gleich.adoc[]
-
-include::partial$ist-nicht-gleich.adoc[]
-
-|====
-
---
+// Herkunft
 
 :filtered-data: für die Validierung
 :unbestimmter-Artikel: einem
@@ -150,6 +117,49 @@ include::partial$liegt-zwischen.adoc[]
 
 |====
 --
+
+// Kennzeichenwert
+
+include::partial$kennzeichenwert.adoc[]
+
+[.collapseBox]
+.Verfügbare Vergleichsoperatoren
+--
+
+[[table-key-figures-kennzeichenwert]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Operator | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+|====
+--
+
+// Schlüsselfeld
+
+include::partial$schluesselfeld.adoc[]
+
+[.collapseBox]
+.Verfügbare Vergleichsoperatoren
+--
+
+[[table-key-figures-operators-schluesselfeld]]
+[cols="1,1,3"]
+|====
+| Vergleichsoperator | Operator | Erklärung
+
+include::partial$ist-gleich.adoc[]
+
+include::partial$ist-nicht-gleich.adoc[]
+
+|====
+
+--
+
+// Varianten-ID
 
 include::partial$varianten-id.adoc[]
 
