--- a/docs/en-gb/modules/business-decisions/pages/marketplace-variation-validation.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/marketplace-variation-validation.adoc
@@ -27,7 +27,7 @@ include::partial$key-figure-introduction.adoc[]
 [#300]
 == Calculation
 
-=== Number
+=== Quantity
 
 :filtered-data: the validation
 :that-means: As such, the stock information is used for the calculation.
@@ -47,6 +47,8 @@ include::partial$creation-date.adoc[]
 == Filter
 
 :filtered-data: the validation
+
+// Created at
 
 include::partial$created-at.adoc[]
 
@@ -79,6 +81,8 @@ include::partial$greater-than.adoc[]
 
 --
 
+// Identifier value
+
 include::partial$identifier-value.adoc[]
 
 [.collapseBox]
@@ -96,6 +100,8 @@ include::partial$is-not-equal.adoc[]
 
 |====
 --
+
+// Key field
 
 include::partial$key-field.adoc[]
 
@@ -115,6 +121,9 @@ include::partial$is-not-equal.adoc[]
 |====
 
 --
+
+
+// Referrer
 
 :filtered-data: the validation
 
@@ -149,6 +158,8 @@ include::partial$is-between.adoc[]
 
 |====
 --
+
+// Variation ID
 
 include::partial$variation-id.adoc[]
 
