--- a/docs/en-gb/modules/business-decisions/partials/number.adoc
+++ b/docs/en-gb/modules/business-decisions/partials/number.adoc
@@ -1,1 +1,1 @@
-{key-figure} is calculated on the basis of the number. {that-means}
+{key-figure} is calculated on the basis of the quantity. {that-means}
