--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -693,6 +693,7 @@
 .plentymarkets Changelog
 * xref:ROOT:changelog.adoc[Aktueller Changelog]
 * xref:changelog:july-2022.adoc[Changelogs Juli 2022]
+** xref:changelog:2022-07-20.adoc[Changelog 20. Juli 2022]
 ** xref:changelog:2022-07-13.adoc[Changelog 13. Juli 2022]
 ** xref:changelog:2022-07-06.adoc[Changelog 06. Juli 2022]
 * xref:changelog:june-2022.adoc[Changelogs Juni 2022]
