--- a/docs/de-de/modules/changelog/pages/2022-07-20.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-07-20.adoc
@@ -275,7 +275,7 @@ Folgende Plugins wurden in den letzten 7 Tagen in einer neuen Version auf plenty
 |2.2.8
 |-
 
-|link:https://marketplace.plentymarkets.com/googletagmanagerultimate_54789[Google Tag Manager + Conversions API | 18 Tools in einem^]
+|link:https://marketplace.plentymarkets.com/googletagmanagerultimate_54789[Google Tag Manager + Conversions API - 18 Tools in einem^]
 |1.3.0
 |-
 
