Added translations for data fields

--- a/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/kaufland-recommended-mappings.adoc
@@ -17,35 +17,40 @@ Einige Datenfelder sind aber in jeder Produktkategorie gleich. Hier werden nur d
 3+| Angebotsdaten +
 *_Hinweis:_* Diese Daten werden für die Angebotserstellung auf Kaufland benötigt und sind bei allen Produktkategorien gleich. Angebote werden für Produkte erstellt, die schon auf Kaufland existieren.
 
-| sku
+| Kategorie
+| ja
+| Die Kaufland-Kategorie. +
+Dieses Datenfeld wird automatisch zugeordnet.
+
+| SKU
 | ja
 | Dieses Datenfeld wird automatisch zugeordnet.
 
-| skuBase
+| SKU-Basis
 | ja
 | Dieses Datenfeld wird automatisch zugeordnet.
 
-| skuStatus
+| SKU-Status
 | ja
 | Dieses Datenfeld wird automatisch zugeordnet.
 
-| condition
+| Zustand
 | ja
 a| Der Zustand der Variante.
 
 * Eigenschaft des Typs *Text* oder *Auswahl*, mögliche Werte: NEW, USED&#95;&#95;&#95;AS&#95;NEW, USED&#95;&#95;&#95;VERY&#95;GOOD, USED&#95;&#95;&#95;GOOD, USED&#95;&#95;&#95;ACCEPTABLE
 
-| listing_price
+| Verkaufspreis
 | ja
 | * *Verkaufspreis »* [Verkaufspreis für Kaufland]
 
-| minimum_price
+| Mindestpreis
 | ja
 | * *Verkaufspreis »* [Verkaufspreis für Kaufland] +
 *_Hinweis:_* Der hier verknüpfte Verkaufspreis muss niedriger sein als der Verkaufspreis für den _listing_price_, um die Tiefpreis-Automatik von Kaufland zu nutzen. +
 Wenn noch andere Händler:innen das gleiche Produkt anbieten, passt die Tiefpreisautomatik deine Preise automatisch an. Dein Preis inklusive Versandkosten ist dann immer einen Cent günstiger als das Angebot deiner Mitbewerber:innen.
 
-| amount
+| Bestand
 | ja
 a| Der Bestand der Variante.
 
@@ -53,13 +58,13 @@ a| Der Bestand der Variante.
 
 *_Tipp:_* Mit den Datenfeldern unter *Virtuelles Gesamtlager* wird die Summe der Bestände aller Vertriebslager exportiert.
 
-| note
+| Zustandsbeschreibung
 | nein
 a| Zusätzlicher Hinweis zum Zustand der Variante bei gebrauchten Artikeln.
 
 * Eigenschaft des Typs *Text*
 
-| handling_time
+| Bearbeitungszeit in Tagen
 | ja
 a| Die Bearbeitungszeit in Tagen.
 
@@ -71,10 +76,10 @@ Um welches Konto es sich bei den Zuordnungen handelt, siehst du an dem Namen und
 
 image::maerkte:kaufland-kontoname-lager.png[]
 
-| id_warehouse
+| Kaufland Lager-ID
 | ja
 | Hier ordnest du deine Kaufland-Lager zu. Für dieses Datenfeld nimmst du eine komplexe Zuordnung vor. Das bedeutet, das du für das Datenfeld des Marktplatzes verschiedene Werte zur Auswahl hast, in diesem Fall sind das deine Kaufland-Lager. Diese Werte ordnest du deinen in plentymarkets gespeicherten Artikeldaten zu, in diesem Fall musst du eine Eigenschaft verwenden. +
-Bei *id_warehouse* wählst du also zunächst das Kaufland-Lager und ordnest dann eine Eigenschaft zu. +
+Bei *Kaufland Lager-ID* wählst du also zunächst das Kaufland-Lager und ordnest dann eine Eigenschaft zu. +
 *_Hinweis:_* Hier wird die ID des Kaufland-Lagers angezeigt. +
 
 empfohlene Zuordnung:
@@ -88,9 +93,9 @@ Um welches Konto es sich bei den Zuordnungen handelt, siehst du an dem Namen und
 
 image::maerkte:kaufland-kontoname-versandprofil.png[]
 
-| id_shipping_group
+| Kaufland-Versandgruppen-ID
 | ja
-a| Hier ordnest du deinen Kaufland-Versandgruppen Versandprofile aus plentymarkets zu. Für dieses Datenfeld nimmst du eine komplexe Zuordnung vor. Das bedeutet, das du für das Datenfeld des Marktplatzes verschiedene Werte zur Auswahl hast. Diese Werte ordnest du deinen in plentymarkets gespeicherten Artikeldaten zu. Bei *id_shipping_group* wählst du zunächst die Kaufland-Versandgruppe und ordnest dann das passende plentymarkets Versandprofil zu. +
+a| Hier ordnest du deinen Kaufland-Versandgruppen Versandprofile aus plentymarkets zu. Für dieses Datenfeld nimmst du eine komplexe Zuordnung vor. Das bedeutet, das du für das Datenfeld des Marktplatzes verschiedene Werte zur Auswahl hast. Diese Werte ordnest du deinen in plentymarkets gespeicherten Artikeldaten zu. Bei *Kaufland Versandgruppen-ID* wählst du zunächst die Kaufland-Versandgruppe und ordnest dann das passende plentymarkets Versandprofil zu. +
 *_Hinweis:_* Hier wird die ID der Kaufland-Versandgruppe angezeigt. +
 
 empfohlene Zuordnung:
