--- a/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/kaufland-recommended-mappings.adoc
@@ -17,35 +17,40 @@ However, some data fields are the same in each category. Only the recommended ma
 3+| Offer data +
 *_Note:_* The data specified here are required for creating offers on Kaufland and are the same for each product category. Offers are created for products which already exist on Kaufland.
 
-| sku
+| Category
+| yes
+| The Kaufland category. +
+This data field is assigned automatically.
+
+| SKU
 | yes
 | This data field is assigned automatically.
 
-| skuBase
+| SKU base
 | yes
 | This data field is assigned automatically.
 
-| skuStatus
+| SKU status
 | yes
 | This data field is assigned automatically.
 
-| condition
+| Condition
 | yes
 a| Indicates the condition of the variation.
 
 * Property of the type *Text* or *Selection*, possible values: NEW, USED___AS_NEW, USED___VERY_GOOD, USED___GOOD, USED___ACCEPTABLE
 
-| listing_price
+| Sales price
 | yes
 | * *Sales price »* [Sales price for Kaufland]
 
-| minimum_price
+| Minimum price
 | yes
 | * *Sales price »* [Sales price for Kaufland] +
 *_Note:_* The sales price linked here has to be lower than the sales price for the _listing_price_ to use repricing (Tiefpreisautomatik) for Kaufland. +
 If other sellers offer the same product, your price is automatically reduced. Your price plus shipping is then always once cent cheaper than the prices of your competitors.
 
-| amount
+| Stock
 | yes
 a| The stock of the variation.
 
@@ -53,13 +58,13 @@ a| The stock of the variation.
 
 *_Tip:_* Use the data fields in the group *Virtual warehouse* to export the stock quantity sum of all sales warehouses.
 
-| note
+| Additional description of condition
 | no
 a| Additional information about the condition of the variation (for used items).
 
 * Property of the type *Text*
 
-| handling_time
+| Processing time
 | yes
 a| The processing time in days.
 
@@ -71,10 +76,10 @@ The name and the ID of the Kaufland account are displayed above the mappings: *A
 
 image::markets:kaufland-kontoname-lager.png[]
 
-| id_warehouse
+| Kaufland warehouse ID
 | yes
 | Here you map Kaufland warehouses. This data field contains a complex mapping. This means that you can select from different values of the marketplace data field. In this case, the values are your Kaufland warehouses. The values are then assigned to a plentymarkets data field. In this case, you have to use a property. +
-For *id_warehouse*, you first select the Kaufland warehouse and then assign a property. +
+For *Kaufland warehouse ID*, you first select the Kaufland warehouse and then assign a property. +
 *_Note:_* The ID of the Kaufland warehouse is shown here. +
 
 recommended mapping:
@@ -88,9 +93,9 @@ The name and the ID of the Kaufland account are displayed above the mappings: *A
 
 image::markets:kaufland-kontoname-versandprofil.png[]
 
-| id_shipping_group
+| Kaufland shipping group ID
 | yes
-a| Here you assign Kaufland shipping groups to your shipping profiles in plentymarkets. This data field contains a complex mapping. This means that you can select from different values of the marketplace data field. The values are then assigned to a plentymarkets data field. For *id_shipping_group*, first select the Kaufland shipping group and then assign the desired plentymarkets shipping profile. +
+a| Here you assign Kaufland shipping groups to your shipping profiles in plentymarkets. This data field contains a complex mapping. This means that you can select from different values of the marketplace data field. The values are then assigned to a plentymarkets data field. For *Kaufland shipping group ID*, first select the Kaufland shipping group and then assign the desired plentymarkets shipping profile. +
 *_Note:_* The ID of the Kaufland shipping group is shown here. +
 
 recommended mapping:
